<resources>
    <string name="app_name">Currency Converter</string>

    <string name="button">Button</string>
    <string name="secondActivityButton">Currencies</string>
    <string name="textfield">Welcome!</string>
    <string name="listview">List View</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="send_request">Update rates</string>
    <string name="addButton">+</string>
    <string name="listTransferButton">List Transfer</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="start">start</string>
    <string name="z">Z</string>
    <string name="y">Y</string>
    <string name="x">X</string>
    <string name="no_sensor">No Sensor</string>
    <string name="stop">Stop</string>
    <string name="orientation">Orientation</string>
    <string name="compass">Compass</string>
    <string name="coordinates_text">GPS-Coordinates:</string>
    <string name="Latitude_text">Latitude</string>
    <string name="Longitude_text">Longitude</string>
    <string name="netCoordinates_text">Net-Coordinates:</string>

</resources>
