<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Lab3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/x"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/x_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp" />

                </TableRow>

                <TableRow android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/y"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/y_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/z"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/z_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp" />
                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/orientation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/orientation"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="5dp"
                            android:paddingRight="5dp"
                            android:text="@string/coordinates_text"
                            android:textColor="@color/colorPrimary"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/coordinates"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/colorPrimary"
                            android:textSize="24sp" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>

            <Button
                android:id="@+id/start_and_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:text="@string/start"
                android:textColor="#F9F9F9" />

            <Button
                android:id="@+id/compass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:text="@string/compass"
                android:textColor="#F9F9F9" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="500dp">

                <TextureView
                    android:id="@+id/textureView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <Button
                android:id="@+id/btnTakePic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:text="Take Photo"
                android:textColor="#F9F9F9" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>